# WildCode

./: ._WildCode.xcodeproj
WildCode.xcodeproj/: project.pbxproj
WildCode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
audio/: audio_main.c  convert.h  convert_wav.c
include/: error.h  io.h  math.h  physics.h  wildcode_audio.h
src/: convert_wav.c  error.c  gravity.c  io_file.c  main.c  math.c
wc_malloc/: CMakeLists.txt
wc_malloc/include/: ._wc_malloc.h  config.h.cmake  wc_malloc.h
wc_malloc/src/: ._main.c  ._wc_malloc.c  CMakeLists.txt  main.c  wc_malloc.c
